--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <meta name="twitter:title" content="Home | Coffee Blog">
         <meta name="twitter:description" content="Learn from the experts with the best recipes and advice on the Coffee of the Veracruz region thanks to our articles and courses.">
         <!-- *** ICONS *** -->
-        <link name="apple-touch-icon" href="https://said-alrove.github.io/coffee-blog/assets/icons/apple-touch-icon.png">
-        <link name="shortcut icon" href="https://said-alrove.github.io/coffee-blog/assets/icons/icon-192.png">
-        <link name="icon" href="https://said-alrove.github.io/coffee-blog/assets/icons/icon-192.png" type="img/png">
+        <link rel="apple-touch-icon" href="https://said-alrove.github.io/coffee-blog/assets/icons/apple-touch-icon.png">
+        <link rel="shortcut icon" href="https://said-alrove.github.io/coffee-blog/assets/icons/icon-192.png">
+        <link rel="icon" href="https://said-alrove.github.io/coffee-blog/assets/icons/icon-192.png" type="img/png">
         <!-- *** RESET *** -->
         <link rel="preload" href="styles/normalize.css" as="style">
         <link rel="stylesheet" href="styles/normalize.css">
