--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                     <input type="email" placeholder="Your e-mail" id="e-mail" class="field__input">
                 </div> <!-- .FIELD -->
                 <div class="field">
-                    <label  class="field__label" for="textarea">Mensaje</label>
+                    <label  class="field__label" for="textarea">Message</label>
                     <textarea placeholder="Write something..." id="textarea" class="field__input field__textarea"></textarea>
                 </div> <!-- .FIELD -->
                 <div class="field">
