--- a/courses.html
+++ b/courses.html
@@ -41,7 +41,7 @@
         <link rel="preload" href="styles/app.css" as="style">
         <link rel="stylesheet" href="styles/app.css">
         <!-- *** EXTRA *** -->
-        <link rel="canonical" href="https://said-alrove.github.io/coffee-blog/">
+        <link rel="canonical" href="https://coffee-blog-119384.netlify.app/">
         <link rel="prefetch" href="https://said-alrove.github.io/coffee-blog/aboutus.html" as="document">
         <link rel="preload" href="https://said-alrove.github.io/coffee-blog/scripts/modernizr.js" as="script">
     </head>
