Update the domain's link

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <meta name="author" content="Said Rosas">
         <title>Contact | Coffee Blog</title>
         <!-- *** OG FACEBOOK *** -->
-        <meta property="og:url" content="https://said-alrove.github.io/coffee-blog/">
+        <meta property="og:url" content="https://coffee-blog-e946f9.netlify.app/">
         <meta property="og:locale" content="en_US">
         <meta property="og:image" content="https://said-alrove.github.io/coffee-blog/assets/jpg/contact.jpg">
         <meta property="og:image:type" content="img/jpg">
@@ -41,7 +41,7 @@
         <link rel="preload" href="styles/app.css" as="style">
         <link rel="stylesheet" href="styles/app.css">
         <!-- *** EXTRA *** -->
-        <link rel="canonical" href="https://coffee-blog-119384.netlify.app/">
+        <link rel="canonical" href="https://coffee-blog-e946f9.netlify.app/">
         <link rel="prefetch" href="https://said-alrove.github.io/coffee-blog/courses.html" as="document">
         <link rel="preload" href="https://said-alrove.github.io/coffee-blog/scripts/modernizr.js" as="script">
     </head>
